# GT-Post

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  env.yml  pixi.toml  pyproject.toml  release-please-config.json  requirements.txt  run_loop.sh  setup.cfg
.github/workflows/: build-and-publish.yml  build-and-test.yml  ci.yml  publish-package.yml  release-please.yml
config/: default_settings.ini  settings_gulehorn_neslen.ini  settings_prograding.ini  settings_river_dominated_delta.ini  settings_river_dominated_delta_2024.ini  settings_roda.ini  settings_sobrarbe.ini
docs/: conf.py  entrypoint_quickstart.md  fordevs.txt  index.rst
docs/technical_docs/: example_interpolation_pts.csv  example_vfractions.csv  exported_parameters.csv  inputini_overview.csv  introduction_td.rst  postprocess_settings.csv
docs/user_guide/: introduction_ug.rst
gt_templates/GuleHorn_Neslen/: GuleHorn_Neslen.sdu  a.bch  a.dep  a.enc  a.obs  a_00deg_slope_1000m.dep  a_00deg_slope_1500m.dep  a_00deg_slope_500m.dep  coarse-sand.mdf  coarse-silt.bcc  coarse-silt.mdf  coarse-silt.sed  config_d_hydro.xml  fine-sand.mdf  input.ini  medium-sand.bcc  medium-sand.mdf  quickin.dia  run_docker.sh  wave.dep  wave.enc  wave.grd  wave.mdw  wave_00deg_slope_1000m.dep  wave_00deg_slope_1500m.dep  wave_00deg_slope_500m.dep  wavecon.wave
gt_templates/River_dominated_delta/: Base_Lyr.thk  River_dominated_delta.sdu  a.bnd  a.dep  a.enc  a.mor  a_00deg_slope_1000m.dep  a_00deg_slope_1500m.dep  a_00deg_slope_500m.dep  coarse-sand.bcc  coarse-sand.mdf  coarse-silt.ini  coarse-silt.mdf  fine-sand.mdf  input.ini  md-tran.tr2  md-tran.tr3  md-tran.tr5  medium-sand.ini  medium-sand.mdf  veryfine-sand.bcc  veryfine-sand.mdf  veryfine-sand.sed  wave.dep  wave.enc  wave.grd  wave.mdw  wave_00deg_slope_1000m.dep  wave_00deg_slope_1500m.dep  wave_00deg_slope_500m.dep  wavecon.wave
gt_templates/Roda/: Roda.sdu  a.bct  a.bnd  a.dep  a.enc  a.obs  coarse-sand.mdf  coarse-silt.mdf  coarse-silt.sed  fine-sand.bcc  fine-sand.mdf  fine-sand.sed  input.ini  medium-sand.mdf  quickin.dia  run_docker.sh  run_loop.sh  veryfine-sand.ini  veryfine-sand.mdf  wave.dep  wave.enc  wave.grd  wave.mdw  wavecon.wave
gt_templates/Sobrarbe/: Base_Lyr.thk  Sobrarbe.sdu  a.bct  a.bnd  a.dep  a.enc  a.grd  a.mor  a.obs  coarse-sand.bcc  coarse-sand.ini  coarse-sand.mdf  coarse-sand.sed  coarse-silt.bcc  coarse-silt.mdf  dioconfig.ini  fine-sand.bcc  fine-sand.ini  fine-sand.mdf  input.ini  medium-sand.bcc  medium-sand.mdf  veryfine-sand.bcc  veryfine-sand.mdf  wave.dep  wave.enc  wave.grd  wave.mdw  wavecon.wave
gt_templates/basin_fill/: a.bcc  a.bnd  a.fil  a.mor  coarse-sand.mdf  coarse-sand.sed  coarse-silt.mdf  config_d_hydro.xml  fine-sand.mdf  fine-sand.sed  md-tran.tr1  medium-sand.mdf  run_flow2d3d.sh  veryfine-sand.mdf  veryfine-sand.sed
gt_templates/basin_fill_marine_reworking/: a.bcc  a.bch  a.bct  a.dep  a.mor  coarse-sand.mdf  coarse-silt.mdf  coarse-silt.sed  fine-sand.mdf  md-tran.tr4  medium-sand.mdf  medium-sand.sed  morlyr.ini  run_flow2d3d.sh  veryfine-sand.mdf  wave.mdw
gtpost/: dataframe_ffill.py  model.py  utils.py
gtpost/analyse/: plot.py  sedlog.py
gtpost/analysis/: sediment.py  surface.py
gtpost/analyze/: classifications.py  layering.py  sediment.py  statistics.py  surface.py  test_order.py  window_ops.py
gtpost/experimental/: detect_archels.py  isolate_yolo_datasets.py  prediction_contraints.py  prediction_parameters.py  prepare_training_data.py  segmentation.py  segmentation_utils.py  test_overloading.py
gtpost/experimental/training_dataset/images_for_masking/: seg_image_Pro118_120.json  seg_image_Pro118_160.json  seg_image_Pro118_240.json  seg_image_Pro118_320.json  seg_image_Pro118_40.json  seg_image_Pro118_80.json  seg_image_Ret104_100.json  seg_image_Ret104_120.json  seg_image_Ret104_140.json  seg_image_Ret104_160.json  seg_image_Ret104_180.json  seg_image_Ret104_20.json  seg_image_Ret104_200.json  seg_image_Ret104_220.json  seg_image_Ret104_240.json  seg_image_Ret104_260.json  seg_image_Ret104_280.json  seg_image_Ret104_300.json  seg_image_Ret104_319.json  seg_image_Ret104_40.json  seg_image_Ret104_60.json  seg_image_Ret104_80.json  seg_image_Ret109_120.json  seg_image_Ret109_160.json  seg_image_Ret109_240.json  seg_image_Ret109_320.json  seg_image_Ret109_40.json  seg_image_Ret109_80.json  seg_image_pro097_100.json  seg_image_pro097_120.json  seg_image_pro097_140.json  seg_image_pro097_160.json  seg_image_pro097_180.json  seg_image_pro097_20.json  seg_image_pro097_200.json  seg_image_pro097_220.json  seg_image_pro097_240.json  seg_image_pro097_260.json  seg_image_pro097_280.json  seg_image_pro097_300.json  (+26 more)
gtpost/experimental/training_dataset/images_for_masking_channels_mouthbars/: seg_image_100_sb48.json  seg_image_120_sb48.json  seg_image_140_sb48.json  seg_image_160_rd58.json  seg_image_180_sb48.json  seg_image_20_rd58.json  seg_image_260_rd58.json  seg_image_260_sb48.json  seg_image_280_rd58.json  seg_image_280_sb48.json  (+5 more)
gtpost/experimental/training_dataset/images_for_masking_channels_mouthbars - Copy/: seg_image_100_rd58.json  seg_image_120_rd58.json  seg_image_160_sb48.json  seg_image_180_rd58.json  seg_image_20_rd58.json  seg_image_220_sb48.json  seg_image_240_rd58.json  seg_image_320_rd58.json  seg_image_40_rd58.json  seg_image_60_rd58.json  seg_image_60_sb48.json
gtpost/interface/: postprocess.py  postprocess_testing.py  preprocess.py  process.py  process_testing.py
gtpost/io/: __init__.py  export.py  read_d3d_input.py  vtk.py
gtpost/postprocess/: sediment.py  surface.py
gtpost/preprocessing/: bathymetry_builder.py  inidata.py  preprocess.py  preprocessing.py  preprocessing_utils.py  template_preprocess.py  test.py  test_preprocess_helper.py  test_template.py  write_ini.py
gtpost/visualise/: colormaps.py  plot.py
gtpost/visualize/: colormaps.py  plot.py  sedlog.py
scripts/: extract_ids.py  payload_handler.py  quickstart.sh
tests/: test_preprocess.py  test_sediment.py  test_surface.py  test_utils.py
tests/data/: coarse-sand.sed  input.ini
(+685 files in other folders)
